(lang dune 3.10)

(name epl)

(generate_opam_files true)

(source
 (github syedtaz/epl))

(authors "Tazmilur Saad")

(maintainers "Tazmilur Saad")

(license LICENSE)

(documentation https://github.com/syedtaz/epl)

(package
 (name epl)
 (synopsis "Elements of Programming Languages by Daniel P. Friedman & Mitchell Wand")
 (description "Elements of Programming Languages by Daniel P. Friedman & Mitchell Wand")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
